--- a/06_JS/04_toDoApp/index.html
+++ b/06_JS/04_toDoApp/index.html
@@ -17,12 +17,24 @@
             z-index: 1;
 
         }
+        .save-button {
+            position: fixed;
+            top: 90vh;
+            left: 20vw;
+            z-index: 1;
 
+        }
+        .load-button {
+            position: fixed;
+            top: 83vh;
+            left: 20vw;
+            z-index: 1;
+
+        }
         .done {
             text-decoration: line-through;
             font-style: italic;
         }
-
         .custom-icon {
             position: absolute;
             right: 1em;
@@ -44,38 +56,23 @@
             </div>
         </div>
 
-
         <button id="js-reverse-button" class="ui orange button reverse-button">Reverse</button>
+        <button id="js-save-button" class="ui green button save-button">Save</button>
+        <button id="js-load-button" class="ui blue button load-button">Load</button>
 
         <!-- Card Area -->
         <div id="js-todo-area" class="ui container">
-
-            <!-- Card -->
-            <div class="ui segment secondary js-card">
-                <div class="ui checkbox">
-                    <input id="tmp" type="checkbox">
-                    <label class="done">밥 먹기</label>
-                </div>
-            </div>
-
-            <!-- Card -->
-            <div class="ui segment js-card">
-                <div class="ui checkbox">
-                    <input type="checkbox">
-                    <label>밥 또 먹기</label>
-                </div>
-            </div>
+           
         </div>
 
     </div>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <!-- Axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main2.js"></script>
 </body>
 
 </html>
