JS | 05_nodeJS selfstudy | 191216

--- a/06_JS/01_basic/00_intro.html
+++ b/06_JS/01_basic/00_intro.html
@@ -26,6 +26,7 @@
         */
         // alert('Welcome to JS')
         buttons = document.querySelectorAll('button');
+        console.log(buttons)           
         plusButton = buttons[0];
         minusButton = buttons[1];
         
