--- a/06_JS/01_basic/02_string.html
+++ b/06_JS/01_basic/02_string.html
@@ -8,7 +8,7 @@
     <script>
         const firstName = 'Diane';
         const lastName = 'Ha';
-        const fullName = firstName + lastName;
+        const fullName = firstName + ' ' + lastName;
 
         // string concatenation
         document.write('<h1>' + fullName + '!!' + '</h1>')
