--- a/06_JS/01_basic/03_condition.html
+++ b/06_JS/01_basic/03_condition.html
@@ -7,7 +7,7 @@
 <body>
     <script>
         const userName = prompt('Who are you?');
-        let message = '';
+        let message;
 
         if (userName === 'Admin'){
             message = 'This is secret admin page';
