--- a/02_web/02_CSS/00_unit.html
+++ b/02_web/02_CSS/00_unit.html
@@ -9,7 +9,7 @@
         }
 
         p {
-            font-size: 1rem; /* 브라우저 기본폰트 사이즈 == 1 rem 으로 약속(절대값) */
+            font-size: 1rem; /* 브라우저 기본폰트 사이즈(16px) == 1 rem 으로 약속(절대값) */
             color: #fff;
             /* R G B */
             /* range(256) */
@@ -29,6 +29,12 @@
 
         div > div {
             font-size: 0.8em;
+        }
+
+        .box-one{
+            width: 50%;
+            height: 10vh; /* 내가 보는 화면의 h 높이의 1/10*/ 
+            background-color: green;
         }
     </style>
 </head>
@@ -57,6 +63,10 @@
             <li>파스타</li>
             <li>샐러드</li>
         </ul>
+    </div>
+
+    <div class="box-one">
+
     </div>
 </body>
 </html>
